[project]
name = "comfyui-elgenerator-klein"
description = "El Generator Klein v2 — 8-node character/scene editor for FLUX.2 Klein 9B. Natural language prose. Photographic realism. Amateur/candid/casual focus. Boolean switches. None defaults."
version = "2.0.0"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/VOTRE_REPO/ComfyUI-ElGenerator-Klein"

[tool.comfy]
PublisherId = "elrandolo"
DisplayName = "El Generator Klein"
Icon = "📸"
